# wasm-spread-sheet

./: .gitignore  README.md
react-client/: package-lock.json  package.json  tsconfig.json
react-client/config/: webpack.config.js
react-client/public/: index.html
react-client/src/: App.css  App.tsx  List.test.ts  components.interface.ts  constants.ts  dataManager.ts  filter.ts  frame.ts  globalDataHandler.ts  hooks.ts  read.worker.ts  reader.css  reader.tsx  suggestion-tree.ts  suggestions.test.ts  utils.ts  worker-loader.d.ts  worker.interface.ts
react-client/src/components/: Column.tsx  Dropdown.tsx  Frame.tsx  Header.tsx  QueryInput.tsx  SideBar.tsx  Slider.tsx  Table.tsx  TableSelector.tsx  components.interface.ts  index.ts  query-input.tsx  reader.tsx  side-bar.tsx  table-ui.tsx  types.ts
react-client/src/frame/: canvas-api.ts  geometry.ts  table-ui.css  table-ui.tsx
react-client/src/hooks/: hooks.interface.ts  store.ts  worker.ts
react-client/src/layout/: side-bar.css  side-bar.tsx
react-client/src/styles/: query-input.css  side-bar.css  table-ui.css
react-client/src/trie/: trie.test.ts  trie.ts
react-client/src/worker/: filter.ts  frame.ts  globalDataHandler.ts  list.ts  read.worker.ts  worker.interface.ts
react-client/typings/: worker-loader.d.ts
wasm/: Cargo.toml  package-lock.json
wasm/src/: buffer.rs  column.rs  csv_parser.rs  filter.rs  lib.rs  public.rs  series.rs  type_parser.rs  utils.rs
wasm/src/command/: exec.rs  mod.rs  parser.rs  suggestion_tree.rs
wasm/src/series/: errors.rs  macros.rs  mod.rs
