[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
js-sys = "0.3.55"
itertools = "0.8"
web-sys = { version = "0.3.55", features = ["console"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0.136", features = ["derive"] }
num = "0.4.0"
lexical = "^6.0"
downcast-rs = "1.2.0"
ouroboros = "0.15.0"
